Dependencies/Developers/Source/MediaInfoDLL/MediaInfoDLL.h

    typedef void* (__stdcall *MEDIAINFO_New)();
    static MEDIAINFO_New MediaInfo_New;
    typedef void* (__stdcall *MEDIAINFOLIST_New)();
    static MEDIAINFOLIST_New MediaInfoList_New;
    typedef void (__stdcall *MEDIAINFO_Delete)(void*);
    static MEDIAINFO_Delete MediaInfo_Delete;
    typedef size_t (__stdcall *MEDIAINFO_Open)(void*, const MediaInfo_Char*);
    static MEDIAINFO_Open MediaInfo_Open;
    typedef size_t (__stdcall *MEDIAINFO_Open_Buffer_Init)(void*, MediaInfo_int64u File_Size, MediaInfo_int64u File_Offset);
    static MEDIAINFO_Open_Buffer_Init MediaInfo_Open_Buffer_Init;
    typedef size_t (__stdcall *MEDIAINFO_Open_Buffer_Continue)(void*, MediaInfo_int8u* Buffer, size_t Buffer_Size);
    static MEDIAINFO_Open_Buffer_Continue MediaInfo_Open_Buffer_Continue;
    typedef MediaInfo_int64u(__stdcall *MEDIAINFO_Open_Buffer_Continue_GoTo_Get)(void*);
    static MEDIAINFO_Open_Buffer_Continue_GoTo_Get MediaInfo_Open_Buffer_Continue_GoTo_Get;
    typedef size_t (__stdcall *MEDIAINFO_Open_Buffer_Finalize)(void*);
    static MEDIAINFO_Open_Buffer_Finalize MediaInfo_Open_Buffer_Finalize;
    typedef void (__stdcall *MEDIAINFO_Close)(void*);
    static MEDIAINFO_Close MediaInfo_Close;
    typedef const MediaInfo_Char* (__stdcall *MEDIAINFO_Inform)(void*, size_t Reserved);
    static MEDIAINFO_Inform MediaInfo_Inform;
    typedef const MediaInfo_Char* (__stdcall *MEDIAINFO_GetI)(void*, MediaInfo_stream_C StreamKind, size_t StreamNumber, size_t Parameter, MediaInfo_info_C KindOfInfo);
    static MEDIAINFO_GetI MediaInfo_GetI;
    typedef const MediaInfo_Char* (__stdcall *MEDIAINFO_Get)(void*, MediaInfo_stream_C StreamKind, size_t StreamNumber, const MediaInfo_Char* Parameter, MediaInfo_info_C KindOfInfo, MediaInfo_info_C KindOfSearch);
    static MEDIAINFO_Get MediaInfo_Get;
    typedef const MediaInfo_Char* (__stdcall *MEDIAINFO_Option)(void*, const MediaInfo_Char* Parameter, const MediaInfo_Char* Value);
    static MEDIAINFO_Option MediaInfo_Option;
    typedef size_t (__stdcall *MEDIAINFO_State_Get)(void*);
    static MEDIAINFO_State_Get MediaInfo_State_Get;
    typedef size_t (__stdcall *MEDIAINFO_Count_Get)(void*, MediaInfo_stream_C StreamKind, size_t StreamNumber);
    static MEDIAINFO_Count_Get MediaInfo_Count_Get;
    /// @brief File opening options
    enum fileoptions_t {
        FileOption_Nothing      = 0x00,
        FileOption_NoRecursive  = 0x01, ///< Do not browse folders recursively
        FileOption_CloseAll     = 0x02, ///< Close all files before open
        FileOption_Max          = 0x04
    };